# modacc

./: README.md  tags
cuda/: CMakeLists.txt  Makefile  README.md  slurm-516767.out  tags
cuda/dump/: encoder.layer.0.output.LayerNorm.bias.json  encoder.layer.0.output.LayerNorm.weight.json
cuda/graph_data/: attn_graph_192.csv  attn_graph_384.csv  attn_graph_768.csv  attn_graph_96.csv  gemm_graph_144.csv  gemm_graph_192.csv  gemm_graph_384.csv  gemm_graph_96.csv  nomr_graph_768.csv  norm_graph_192.csv  norm_graph_96.csv  plot_bar.py
cuda/include/: common.h  ds_transformer_cuda.h  gelu.h  gemm.h
cuda/logs/: stream_gemm_4_1024_1024.txt  wallclock_gemm_4_1024_1024.txt  wallclock_gemm_8_1024_1024.txt
cuda/scripts/: generate_plots.sh  nvprof_perf.sh  plot_speedups.py  reorder_times.sh  stream_times.sh  wallclock_times.sh
cuda/src/: CMakeLists.txt  ds_transformer_cuda.cpp  fine_grained_gemm.cu  fine_grained_perf.cu  reorder_memory_layout.cu
cuda/test_encoder/: 8.csv  README.md  coarse_grained_encoder_backpropogation  coarse_grained_encoder_backpropogation.cu  compile.sh  dropout.h  encoder  encoder.cu  encoder.txt  encoder_1.txt  encoder_backward_pass  encoder_backward_pass.cu  encoder_new.txt  encoder_stats.txt  feed_forward.h  fine_grained.cu  fine_grained_attention_output_linear  fine_grained_attention_output_linear.cu  fine_grained_encoder-q1.txt  fine_grained_encoder-q24-1.txt  fine_grained_encoder-q8-1.txt  fine_grained_encoder-q8-2.txt  fine_grained_encoder-q8-3.txt  fine_grained_encoder_backpropogation  fine_grained_encoder_backpropogation-backup.cu  (+46 more)
(+120 files in other folders)
