cmake_minimum_required(VERSION 2.8.12.2)
if (${WIN32})
  message ("Build on Windows not (yet) supported.")
endif (${WIN32})
find_package(CUDA)
project(ascend)
set (MODACC_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include" )
set (MODACC_LIB_DIR "${PROJECT_BINARY_DIR}/lib")
message("Include directory ${MODACC_INCLUDE_DIR}")
message("Lib directory ${MODACC_LIB_DIR}")
add_subdirectory (src)
